@@ -1,4 +1,4 @@
-namespace ChangeTracker
+namespace Luv2Code.ChangeTracker
 {
     public enum ChangeIdentifier
     {
