@@ -1,1 +1,3 @@
 ﻿Version 2.0.0
+
+Root namespace - Changed to Luv2Code.ChangeTracker
